@@ -1738,4 +1738,8 @@
 /../utf,auto_callout
     \n\x{123}\x{123}\x{123}\x{123}
 
+# This tests processing wide characters in extended mode.
+
+/XȀ/x,utf
+
 # End of testinput5 
